# university-scheduling

./: .gitignore  CMakeLists.txt  README.md
rapport/: rapport-infofond.tex
src/: CMakeLists.txt  Makefile  Problem.cpp  Problem.hpp  Problem4.cpp  Problem4.hpp  Problem5.cpp  Problem5.hpp  Problem6.cpp  Problem6.hpp  Problem7.cpp  Problem7.hpp  Problem8.cpp  Problem8.hpp  Problem9.cpp  Problem9.hpp  TestMe.sh  Writer.cpp  Writer.hpp  datacreator.py  example-inputs.txt  main.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp  main9.cpp  main_helper.hpp
src/example/: example.hpp  example2.cpp  example2.hpp
src/fixtures/: input-random1.txt  input-random2.txt  input-random3.txt  q4-first-example.txt  q4-impossible.txt  q4-middle-long.txt  q4-simple.txt  q5-counter1.txt  q5-middle.txt  q6-long.txt  q6-middle.txt  q7-notworking.txt  q7-working.txt  q9-example
src/homemadeparser/: example-inputs.txt  main.cpp
src/input/: q4.txt
src/mini-sat/: CMakeLists.txt
src/mini-sat/minisat/: Global.hpp  Solver.hpp
src/minisat/: Solver.cpp
src/parser/: Makefile  SchedSpec.hpp  main.cpp  parser  parser.hpp  parser.l
src/project-parser/: lex.yy.c  parser.cpp  parser.hpp  parser.output  parser.y
